Fix scrollbars always appearing in textareas in IE. Fixes #3765, props xeqta
git-svn-id: https://buddypress.svn.wordpress.org/trunk@6029 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -132,6 +132,9 @@ div#content .left-menu {
 div#content .main-column {
 	margin-left: 190px;
 }
+textarea {
+	overflow: auto;
+}
 
 
 /*--------------------------------------------------------------
